# certdump

./: .gitignore  CMakeLists.txt  LICENSE  README.md  certdump.cpp  certdump.h  openssl_helpers.cpp  vcpkg.json  versinfo.rh2  viewer.cpp
.github/workflows/: test.yml
include/certdump/: certdump.h
src/: CMakeLists.txt  certdump.cpp  openssl_helpers.cpp  openssl_helpers.h
test/: CMakeLists.txt  certdump-test.cpp  der-tests.cpp  pem-tests.cpp  utils.cpp  utils.h
test/certificates/der/: x509-acert.der
test/certificates/pem/: x509-acert.pem
